edv/kustomize/edv/overlays/local/oathkeeper/update-local-cert-store.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: edv-oathkeeper
spec:
  template:
    spec:
      securityContext:
        runAsUser: 0
      volumes:
        - name: ca-cert
          configMap:
            name: edv-ca-cert
      containers:
        - name: oathkeeper
          command: ["/bin/sh"]
          args:
            - "-c"
            - |
              cp /opt/ca.crt /usr/local/share/ca-certificates/;
              update-ca-certificates;
              oathkeeper serve --config /etc/config/config.yml;
          volumeMounts:
            - name: ca-cert
              mountPath: /opt
