edv/kustomize/edv/overlays/local/oathkeeper/ingress.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edv-oathkeeper-proxy
  labels:
    app: edv-oathkeeper
spec:
  tls:
  - hosts:
      - $(PROXY_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(PROXY_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: edv-oathkeeper-proxy
            port:
              name: http
